HOOP-206: Team Members - put Current and Requests in tab + fix player name truncation

--- a/Dribbly.Web/wwwroot/src/modules/main/components/teammemberslist/teammemberslist.component.scss
+++ b/Dribbly.Web/wwwroot/src/modules/main/components/teammemberslist/teammemberslist.component.scss
@@ -2,6 +2,7 @@
 
 drbbly-teammemberslist {
     .team-member-list-item {
+
         .jersey-no,
         .position {
             color: $white;
@@ -10,11 +11,8 @@ drbbly-teammemberslist {
             -webkit-text-stroke: 1px $black;
         }
 
-        .position{
+        .position {
             font-size: 1em;
-        }
-
-        .photo-container {
         }
     }
 }
