--- a/Dribbly.Web/wwwroot/src/shared/modules/site/site.scss
+++ b/Dribbly.Web/wwwroot/src/shared/modules/site/site.scss
@@ -299,6 +299,21 @@ img.avatar {
     text-decoration: underline;
 }
 
+.text-line-1 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.text-line-2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
 .font-weight-semibold {
     font-weight: 600;
 }
